<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobii</string>

    <string name="mobii_menu_settings">Settings</string>
    <string name="mobii_menu_about">About</string>
    <string name="mobii_menu_exit">Exit</string>

    <string name="title_section_connection">Connection</string>
    <string name="title_section_settings">Settings</string>
    <string name="title_section_about">About</string>

	<!-- activity_mobii_about.xml -->
    <string name="mobii_website">Mobii Website</string>

	<!-- activity_mobii_connection.xml / activity_mobii_connected.xml -->
    <string name="et_pwd_hint">Password</string>
    <string name="tv_connection_code">CONNECTION CODE</string>
    <string name="tv_uid">UID</string>
    <string name="bt_connection">CONNECTION</string>
    <string name="bt_disconnection">DISCONNECTION</string>

	<!-- activity_mobii_connecting.xml -->
    <string name="tv_connecting">Connection&#8230;</string>

	<!-- activity_mobii_settings.xml -->
    <string name="wifi_connection">Wi-fi connection only</string>
    <string name="launch_startup">Launch on startup</string>
    <string name="action_settings">Settings</string>

</resources>
